# mcp-pcapy-ng

./: .bumpversion.cfg  CHANGELOG.md  README.md  SKILL.md  SPEC.md  mcp.json  pyproject.toml  server.json
.github/workflows/: pypi-publish.yml
src/mcp_pcapy_ng/: __init__.py  __main__.py  _tools.py  mcp.py  py.typed
tests/: conftest.py  test_tools.py
